syntax = "proto2";
package etop.vn.api.main.shipping.v1.types;
option go_package = "types";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = false;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_sizecache_all)    = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "etop.vn/api/meta/v1/api.proto";

message ShippingService {
    optional string carrier = 1 [(gogoproto.nullable)=false];

    optional string code = 2 [(gogoproto.nullable)=false];

    optional int32 fee = 3 [(gogoproto.nullable)=false];

    optional string name = 4 [(gogoproto.nullable)=false];

    optional meta.v1.Timestamp estimated_pickup_at = 5;

    optional meta.v1.Timestamp estimated_delivery_at = 6;
}

message WeightInfo {
    optional int32 gross_weight = 1 [(gogoproto.nullable)=false];

    optional int32 chargeable_weight = 2 [(gogoproto.nullable)=false];

    optional int32 length = 3 [(gogoproto.nullable)=false];

    optional int32 width = 4 [(gogoproto.nullable)=false];

    optional int32 height = 5 [(gogoproto.nullable)=false];
}

message ValueInfo {
    optional int32 basket_value = 1 [(gogoproto.nullable)=false];

    optional int32 cod_amount = 2 [(gogoproto.nullable)=false];

    optional bool include_insurance = 3 [(gogoproto.nullable)=false];
}
